# DirectX11-With-Windows-SDK-Extra

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
Project Extra 01-/: CMakeLists.txt
Project Extra 01-/01 Enable DPI Awareness (Win32 API)/: 01 Enable DPI Awareness (Win32 API).md  CMakeLists.txt  HighDPI.cpp  HighDPI.hpp  Main.cpp
Project Extra 01-/01 What is Hight DPI/: 01 What is Hight DPI.md
Project Extra 01-02/: CMakeLists.txt
Project Extra 01-02/01 What is Hight DPI/: 01 What is Hight DPI.md  ref.txt
Project Extra 01-02/02 Enable Hight DPI Awareness/: CMakeLists.txt  main.cpp
docs/: README.md  _sidebar.md  index.html
docs/DirectComposition/: 01-Versions.md  02-Initialization.md  README.md
docs/DirectComposition/MSDN-Translation/: DirectComposition-glossary.md  README.md  Why-use-DirectComposition.md
docs/DirectComposition/MSDN-Translation/DirectComposition-concepts/: README.md
docs/Window/The-Old-New-Thing-Translation/: WS_EX_COMPOSITED.md  WS_EX_TRANSPARENT.md
sample/DirectX11-With-Windows-SDK-Extra/: DirectX11-With-Windows-SDK-Extra.sln
sample/DirectX11-With-Windows-SDK-Extra/DirectComposition/DirectComposition-01-Initialization/: DirectComposition-01-Initialization.vcxproj  DirectComposition-01-Initialization.vcxproj.filters  Main.cpp
